# QUASAR-gs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  assets
apps/: gs_streamer.cpp  gs_viewer.cpp
include/: GSRenderer.h  gaussiancloud.h  ply.h  pointcloud.h  program.h  radix_sort.hpp  splatrenderer.h  vertexbuffer.h
shaders/: splat_vert.glsl
src/: GSRenderer.cpp  binaryattribute.cpp  gaussiancloud.cpp  gs_viewer.cpp  ply.cpp  pointcloud.cpp  program.cpp  splatrenderer.cpp  util.cpp  vertexbuffer.cpp
